<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_main_search"
		android:icon="@drawable/baseline_search_24"
		android:orderInCategory="9"
		android:title="@string/menu_main_search"
		app:actionViewClass="androidx.appcompat.widget.SearchView"
		app:showAsAction="always|collapseActionView" />
	<item
		android:id="@+id/menu_main_today"
		android:icon="@drawable/baseline_today_24"
		android:orderInCategory="10"
		android:title="@string/menu_today"
		app:showAsAction="ifRoom|collapseActionView" />
	<item
		android:id="@+id/menu_main_settings"
		android:icon="@drawable/baseline_settings_24"
		android:orderInCategory="11"
		android:title="@string/menu_main_settings"
		app:showAsAction="ifRoom|collapseActionView" />

</menu>
