<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main_layout_drawer"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:openDrawer="start">

	<RelativeLayout
		android:id="@+id/activity_main_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/activity_main_toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?attr/actionBarSize"
			app:menu="@menu/main" />

		<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
			android:id="@+id/activity_main_swipe_refresh"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/activity_main_toolbar"
			android:layout_marginBottom="50dp"
			android:visibility="invisible">

			<androidx.viewpager2.widget.ViewPager2
				android:id="@+id/main_pager_months"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:saveEnabled="false" />

		</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

		<LinearLayout
			android:id="@+id/activity_main_progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:gravity="center_horizontal"
			android:orientation="vertical">

			<FrameLayout
				android:layout_width="160dp"
				android:layout_height="160dp">

				<com.google.android.material.imageview.ShapeableImageView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:scaleType="fitXY"
					android:src="@drawable/ic_launcher_background"
					app:shapeAppearanceOverlay="@style/SplashIconShape" />

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:contentDescription="@string/content_description_icon_main"
					android:padding="16dp"
					android:scaleType="fitCenter"
					android:src="@drawable/logo_transparent" />
			</FrameLayout>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:text="@string/app_name"
				android:textAppearance="?attr/textAppearanceHeadlineSmall"
				android:textColor="?android:attr/textColorPrimary" />
		</LinearLayout>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/main_list_results"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@id/main_bottom_layout_container"
			android:layout_below="@id/activity_main_toolbar"
			android:contentDescription="@string/content_description_search_results"
			android:visibility="invisible"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

		<LinearLayout
			android:id="@+id/main_bottom_layout_container"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:layout_alignParentBottom="true">

			<com.google.android.gms.ads.AdView
				android:id="@+id/main_adview_bottom"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:contentDescription="@string/content_description_ad"
				app:adSize="BANNER"
				app:adUnitId="@string/banner_ad_unit_id" />
		</LinearLayout>

	</RelativeLayout>

	<com.google.android.material.navigation.NavigationView
		android:id="@+id/activity_main_navigation"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		app:headerLayout="@layout/navigation_drawer_header"
		app:menu="@menu/drawer" />

</androidx.drawerlayout.widget.DrawerLayout>
