<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/background_primary"
	android:orientation="vertical">

	<com.google.android.material.card.MaterialCardView
		android:id="@+id/card"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="8dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/activity_holiday_image"
				android:layout_width="match_parent"
				android:layout_height="194dp"
				android:contentDescription="@string/content_description_image"
				android:scaleType="centerCrop"
				android:visibility="gone" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="16dp">

				<TextView
					android:id="@+id/activity_holiday_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:padding="10dp"
					android:textAppearance="?attr/textAppearanceTitleMedium"
					android:textColor="?android:attr/textColorPrimary"
					android:textSize="@dimen/activity_holiday_name" />

				<TextView
					android:id="@+id/activity_holiday_description"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="10dp"
					android:textAppearance="?attr/textAppearanceBodyMedium"
					android:textColor="?android:attr/textColorSecondary"
					android:textSize="@dimen/activity_holiday_description" />

			</LinearLayout>

			<!-- Buttons -->
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:orientation="horizontal">

				<com.google.android.material.button.MaterialButton
					android:id="@+id/iconButton"
					style="?attr/materialIconButtonOutlinedStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:visibility="gone"
					app:icon="@drawable/baseline_flag_24" />
			</LinearLayout>
		</LinearLayout>
	</com.google.android.material.card.MaterialCardView>

	<com.google.android.gms.ads.AdView
		android:id="@+id/activity_holiday_adview_bottom"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:contentDescription="@string/content_description_ad"
		ads:adSize="BANNER"
		ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>
